Add Nuke build support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,9 @@ if("$ENV{AR_DCC_NAME}" STREQUAL "STANDALONE")
         set(AR_PYTHON_INCLUDE_DIR ${AR_USD_STANDALONE_ROOT}/python/include/${AR_PYTHON_LIB})
     endif()
     set(AR_PYTHON_EXECUTABLE ${AR_USD_STANDALONE_ROOT}/python/python)
+    # TBB
+    set(AR_TBB_LIB_DIR ${AR_USD_STANDALONE_ROOT}/lib)
+    set(AR_TBB_INCLUDE_DIR ${AR_USD_STANDALONE_ROOT}/include)
     # Usd
     set(AR_PXR_LIB_PREFIX "usd_")
     set(AR_PXR_PYTHON_LIB_SITEPACKAGES ${AR_USD_STANDALONE_ROOT}/lib/python)
@@ -182,6 +185,9 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "HOUDINI")
         set(AR_PYTHON_INCLUDE_DIR ${AR_HOUDINI_ROOT}/python/include/${AR_PYTHON_LIB})
     endif()
     set(AR_PYTHON_EXECUTABLE ${AR_HOUDINI_ROOT}/python/bin/python)
+    # TBB
+    set(AR_TBB_LIB_DIR ${AR_HOUDINI_LIB_DIR})
+    set(AR_TBB_INCLUDE_DIR ${AR_HOUDINI_INCLUDE_DIR})
     # Usd
     if (WIN32)
         set(AR_PXR_LIB_PREFIX "libpxr_")
@@ -247,7 +253,6 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "MAYA")
             message(FATAL_ERROR "Failed to find a compatible Python version.")
         endif()
     endif()
-    set(AR_PYTHON_LIB_DIR ${AR_PYTHON_ROOT}/lib)
     if (WIN32)
         set(AR_PYTHON_LIB_DIR ${AR_PYTHON_ROOT}/libs)
         set(AR_PYTHON_INCLUDE_DIR ${AR_PYTHON_ROOT}/include)
@@ -256,6 +261,13 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "MAYA")
         set(AR_PYTHON_INCLUDE_DIR ${AR_PYTHON_ROOT}/include/${AR_PYTHON_LIB})
     endif()
     set(AR_PYTHON_EXECUTABLE ${AR_PYTHON_ROOT}/bin/python3)
+    # TBB
+    if (WIN32)
+        set(AR_TBB_LIB_DIR ${AR_MAYA_USD_SDK_DEVKIT_ROOT}/lib)
+    else()
+        set(AR_TBB_LIB_DIR ${AR_MAYA_USD_SDK_ROOT}/lib)
+    endif()
+    set(AR_TBB_INCLUDE_DIR ${AR_MAYA_USD_SDK_DEVKIT_ROOT}/include)
     # Usd
     if (WIN32)
         set(AR_PXR_LIB_DIR ${AR_MAYA_USD_SDK_DEVKIT_ROOT}/lib)
@@ -295,6 +307,73 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "MAYA")
             set(AR_BOOST_INCLUDE_DIR ${AR_MAYA_INCLUDE_DIR}/${AR_BOOST_NAMESPACE})
         endif()
     endif()
+elseif("$ENV{AR_DCC_NAME}" STREQUAL "NUKE")
+    # Nuke
+    set(AR_NUKE_ROOT $ENV{NUKE_ROOT} CACHE PATH "Nuke install directory")
+    # Python
+    if (WIN32)
+        if(EXISTS "${AR_NUKE_ROOT}/python311.dll")
+            set(AR_PYTHON_LIB python311)
+            set(AR_PYTHON_LIB_NUMBER python311)
+        elseif(EXISTS "${AR_MAYA_USD_SDK_LIB_DIR}/python310.dll")
+            set(AR_PYTHON_LIB python310)
+            set(AR_PYTHON_LIB_NUMBER python310)
+        else()
+            message(FATAL_ERROR "Failed to find a compatible Python version.")
+        endif()
+    else()
+        if(EXISTS "${AR_NUKE_ROOT}/python3.11")
+            set(AR_PYTHON_LIB python3.11)
+            set(AR_PYTHON_LIB_NUMBER python311)
+        elseif(EXISTS "${AR_NUKE_ROOT}/python3.10")
+            set(AR_PYTHON_LIB python3.10)
+            set(AR_PYTHON_LIB_NUMBER python310)
+        else()
+            message(FATAL_ERROR "Failed to find a compatible Python version.")
+        endif()
+    endif()
+    if (WIN32)
+        set(AR_PYTHON_LIB_DIR ${AR_NUKE_ROOT})
+        set(AR_PYTHON_INCLUDE_DIR ${AR_NUKE_ROOT}/include)
+    else()
+        set(AR_PYTHON_LIB_DIR ${AR_NUKE_ROOT})
+        set(AR_PYTHON_INCLUDE_DIR ${AR_NUKE_ROOT}/include/${AR_PYTHON_LIB})
+    endif()
+    set(AR_PYTHON_EXECUTABLE ${AR_NUKE_ROOT}/python3)
+    # TBB
+    set(AR_TBB_ROOT $ENV{TBB_ROOT})
+    set(AR_TBB_LIB_DIR ${AR_NUKE_ROOT}/lib)
+    set(AR_TBB_INCLUDE_DIR ${AR_TBB_ROOT}/include)
+    # Usd
+    if (WIN32)
+        set(AR_PXR_LIB_DIR ${AR_NUKE_ROOT}/FnUSD/lib)
+    else()
+        set(AR_PXR_LIB_DIR ${AR_NUKE_ROOT}/FnUSD/lib)
+    endif()
+    set(AR_PXR_LIB_PREFIX "usd_")
+    set(AR_PXR_INCLUDE_DIR ${AR_NUKE_ROOT}/FnUSD/include)
+    set(AR_PXR_PYTHON_LIB_SITEPACKAGES ${AR_NUKE_ROOT}/FnUSD/lib/python)
+    # Boost
+    # See our building.md Nuke section for more info on why we use foundryboost here.
+    add_compile_definitions(boost=foundryboost)
+    set(AR_BOOST_ROOT $ENV{BOOST_ROOT})
+    if(EXISTS "${AR_PXR_INCLUDE_DIR}/pxr/external/boost")
+        set(AR_BOOST_PXR_EXTERNAL_EXISTS 1)
+        set(AR_BOOST_NAMESPACE pxr_boost)
+        # We still link the absolute path (as to INCLUDE_DIR-ing the pxr/external,
+        # since some distributions still include boost and then we'd have a first-come-first-serve issue).
+        set(AR_BOOST_FOLDER_NAMESPACE pxr/external/boost)
+        set(AR_BOOST_PYTHON_LIB ${AR_PXR_LIB_PREFIX}boost)
+        set(AR_BOOST_LIB_DIR ${AR_PXR_LIB_DIR})
+        set(AR_BOOST_INCLUDE_DIR ${AR_PXR_INCLUDE_DIR})
+    else()
+        set(AR_BOOST_PXR_EXTERNAL_EXISTS 0)
+        set(AR_BOOST_NAMESPACE foundryboost)
+        set(AR_BOOST_FOLDER_NAMESPACE foundryboost)
+        set(AR_BOOST_LIB_DIR ${AR_PXR_LIB_DIR})
+        set(AR_BOOST_PYTHON_LIB foundryboost_${AR_PYTHON_LIB_NUMBER})
+        set(AR_BOOST_INCLUDE_DIR ${AR_BOOST_ROOT}/include)
+    endif()
 endif()
 
 ### Init ###
@@ -305,7 +384,7 @@ project(${AR_PROJECT_NAME} VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(BUILD_SHARED_LIBS ON)
 # Preprocessor Defines (Same as #define)
-add_compile_definitions(HBOOST_ALL_NO_LIB BOOST_ALL_NO_LIB)
+add_compile_definitions(BOOST_ALL_NO_LIB Boost_NO_SYSTEM_PATHS=ON)
 if (WIN32)
     add_compile_definitions(NOMINMAX)
 else()
@@ -328,11 +407,11 @@ else()
     endif()
 endif()
 # Compiler Options
-# This is the same as set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHBOOST_ALL_NO_LIB -D_GLIBCXX_USE_CXX11_ABI=0")
+# This is the same as set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} <flags>")
 if (WIN32)
     add_compile_options(/Zc:inline- /w)
 else()
-    add_compile_options(-fPIC -Wno-deprecated -Wno-deprecated-declarations -Wno-changes-meaning)
+    add_compile_options(-fPIC -Wno-deprecated -Wno-deprecated-declarations -Wno-changes-meaning -Wno-template-body)
 endif()
 
 ### Packages ###
@@ -344,6 +423,8 @@ include_directories(${CMAKE_SOURCE_DIR}/src/utils)
 
 # Python
 link_directories(${AR_PYTHON_LIB_DIR})
+# TBB
+link_directories(${AR_TBB_LIB_DIR})
 # Usd
 link_directories(${AR_PXR_LIB_DIR})
 # Boost
