--- a/src/CachedResolver/CMakeLists.txt
+++ b/src/CachedResolver/CMakeLists.txt
@@ -31,13 +31,13 @@ set_boost_pxr_external_exists(${AR_CACHEDRESOLVER_TARGET_LIB})
 # Libs
 target_link_libraries(${AR_CACHEDRESOLVER_TARGET_LIB}
     ${AR_PYTHON_LIB}
+    ${AR_BOOST_PYTHON_LIB}
     ${AR_PXR_LIB_PREFIX}arch
     ${AR_PXR_LIB_PREFIX}tf
     ${AR_PXR_LIB_PREFIX}gf
     ${AR_PXR_LIB_PREFIX}vt
     ${AR_PXR_LIB_PREFIX}ar
     ${AR_PXR_LIB_PREFIX}sdf
-    ${AR_BOOST_PYTHON_LIB}
 )
 # Headers
 target_include_directories(${AR_CACHEDRESOLVER_TARGET_LIB}
@@ -90,8 +90,9 @@ target_link_libraries(${AR_CACHEDRESOLVER_TARGET_PYTHON}
 target_include_directories(${AR_CACHEDRESOLVER_TARGET_PYTHON}
     PUBLIC
         ${AR_PYTHON_INCLUDE_DIR}
-        ${AR_PXR_INCLUDE_DIR}
+        ${AR_TBB_INCLUDE_DIR}
         ${AR_BOOST_INCLUDE_DIR}
+        ${AR_PXR_INCLUDE_DIR}
 )
 # Props
 # Remove default "lib" prefix
