Improve Nuke build instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -311,11 +311,12 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "NUKE")
     # Nuke
     set(AR_NUKE_ROOT $ENV{NUKE_ROOT} CACHE PATH "Nuke install directory")
     # Python
+    set(AR_PYTHON_ROOT $ENV{PYTHON_ROOT} CACHE PATH "Python install directory (only needed on Windows)")
     if (WIN32)
         if(EXISTS "${AR_NUKE_ROOT}/python311.dll")
             set(AR_PYTHON_LIB python311)
             set(AR_PYTHON_LIB_NUMBER python311)
-        elseif(EXISTS "${AR_MAYA_USD_SDK_LIB_DIR}/python310.dll")
+        elseif(EXISTS "${AR_NUKE_ROOT}/python310.dll")
             set(AR_PYTHON_LIB python310)
             set(AR_PYTHON_LIB_NUMBER python310)
         else()
@@ -334,7 +335,7 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "NUKE")
     endif()
     if (WIN32)
         set(AR_PYTHON_LIB_DIR ${AR_NUKE_ROOT})
-        set(AR_PYTHON_INCLUDE_DIR ${AR_NUKE_ROOT}/include)
+        set(AR_PYTHON_INCLUDE_DIR ${AR_PYTHON_ROOT}/include)
     else()
         set(AR_PYTHON_LIB_DIR ${AR_NUKE_ROOT})
         set(AR_PYTHON_INCLUDE_DIR ${AR_NUKE_ROOT}/include/${AR_PYTHON_LIB})
@@ -345,18 +346,12 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "NUKE")
     set(AR_TBB_LIB_DIR ${AR_NUKE_ROOT}/lib)
     set(AR_TBB_INCLUDE_DIR ${AR_TBB_ROOT}/include)
     # Usd
-    if (WIN32)
-        set(AR_PXR_LIB_DIR ${AR_NUKE_ROOT}/FnUSD/lib)
-    else()
-        set(AR_PXR_LIB_DIR ${AR_NUKE_ROOT}/FnUSD/lib)
-    endif()
+    set(AR_PXR_LIB_DIR ${AR_NUKE_ROOT}/FnUSD/lib)
     set(AR_PXR_LIB_PREFIX "usd_")
     set(AR_PXR_INCLUDE_DIR ${AR_NUKE_ROOT}/FnUSD/include)
     set(AR_PXR_PYTHON_LIB_SITEPACKAGES ${AR_NUKE_ROOT}/FnUSD/lib/python)
     # Boost
     # See our building.md Nuke section for more info on why we use foundryboost here.
-    add_compile_definitions(boost=foundryboost)
-    set(AR_BOOST_ROOT $ENV{BOOST_ROOT})
     if(EXISTS "${AR_PXR_INCLUDE_DIR}/pxr/external/boost")
         set(AR_BOOST_PXR_EXTERNAL_EXISTS 1)
         set(AR_BOOST_NAMESPACE pxr_boost)
@@ -367,6 +362,8 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "NUKE")
         set(AR_BOOST_LIB_DIR ${AR_PXR_LIB_DIR})
         set(AR_BOOST_INCLUDE_DIR ${AR_PXR_INCLUDE_DIR})
     else()
+        add_compile_definitions(boost=foundryboost)
+        set(AR_BOOST_ROOT $ENV{BOOST_ROOT})
         set(AR_BOOST_PXR_EXTERNAL_EXISTS 0)
         set(AR_BOOST_NAMESPACE foundryboost)
         set(AR_BOOST_FOLDER_NAMESPACE foundryboost)
