Revert hboost compile defs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,6 +213,7 @@ elseif("$ENV{AR_DCC_NAME}" STREQUAL "HOUDINI")
         set(AR_BOOST_LIB_DIR ${AR_HOUDINI_LIB_DIR})
         set(AR_BOOST_INCLUDE_DIR ${AR_PXR_INCLUDE_DIR}/pxr/external)
     else()
+        add_compile_definitions(HBOOST_ALL_NO_LIB)
         set(AR_BOOST_PXR_EXTERNAL_EXISTS 0)
         set(AR_BOOST_NAMESPACE hboost)
         set(AR_BOOST_FOLDER_NAMESPACE hboost)
