add chinese translate

--- a/src/CachedResolver/CMakeLists.txt
+++ b/src/CachedResolver/CMakeLists.txt
@@ -10,39 +10,41 @@ endif()
 ### Targets ###
 ## Target library > cachedResolver ##
 add_library(${AR_CACHEDRESOLVER_TARGET_LIB}
-    SHARED
-        debugCodes.cpp
-        resolver.cpp
-        resolverContext.cpp
-        resolverTokens.cpp
-        # Since when our resolver calls into Python it passes the ResolverContext,
-        # we need to ensure that Python has loaded the ResolverContext C++ representation.
-        # While we do have duplicate compiled code by adding the below, this allows us to not do hacky workarounds like
-        # LD_PRELOAD-ing the lib. See https://github.com/LucaScheller/VFX-UsdAssetResolver/issues/3 for more information.
-        # If you know a better way around this please file a PR :)
-        module.cpp
-        moduleDeps.cpp
-        wrapResolver.cpp
-        wrapResolverContext.cpp
-        wrapResolverTokens.cpp
+    debugCodes.cpp
+    resolver.cpp
+    resolverContext.cpp
+    resolverTokens.cpp
+    # Since when our resolver calls into Python it passes the ResolverContext,
+    # we need to ensure that Python has loaded the ResolverContext C++ representation.
+    # While we do have duplicate compiled code by adding the below, this allows us to not do hacky workarounds like
+    # LD_PRELOAD-ing the lib. See https://github.com/LucaScheller/VFX-UsdAssetResolver/issues/3 for more information.
+    # If you know a better way around this please file a PR :)
+    module.cpp
+    moduleDeps.cpp
+    wrapResolver.cpp
+    wrapResolverContext.cpp
+    wrapResolverTokens.cpp
 )
 set_boost_namespace(${AR_CACHEDRESOLVER_TARGET_LIB})
+set_boost_folder_namespace(${AR_CACHEDRESOLVER_TARGET_LIB})
+set_boost_pxr_external_exists(${AR_CACHEDRESOLVER_TARGET_LIB})
 # Libs
 target_link_libraries(${AR_CACHEDRESOLVER_TARGET_LIB}
+    ${AR_PYTHON_LIB}
+    ${AR_BOOST_PYTHON_LIB}
     ${AR_PXR_LIB_PREFIX}arch
     ${AR_PXR_LIB_PREFIX}tf
     ${AR_PXR_LIB_PREFIX}gf
     ${AR_PXR_LIB_PREFIX}vt
     ${AR_PXR_LIB_PREFIX}ar
     ${AR_PXR_LIB_PREFIX}sdf
-    ${AR_BOOST_PYTHON_LIB}
 )
 # Headers
 target_include_directories(${AR_CACHEDRESOLVER_TARGET_LIB}
     PUBLIC
-    ${AR_BOOST_INCLUDE_DIR}
     ${AR_PYTHON_INCLUDE_DIR}
     ${AR_PXR_INCLUDE_DIR}
+    ${AR_BOOST_INCLUDE_DIR}
 )
 # Props
 # Remove default "lib" prefix
@@ -66,18 +68,19 @@ install(TARGETS ${AR_CACHEDRESOLVER_TARGET_LIB} DESTINATION ${AR_CACHEDRESOLVER_
 
 ## Target library > cachedResolver Python ##
 add_library(${AR_CACHEDRESOLVER_TARGET_PYTHON}
-    SHARED
-        module.cpp
-        moduleDeps.cpp
-        # resolver.cpp
-        resolverTokens.cpp
-        resolverContext.cpp
-        wrapResolver.cpp
-        wrapResolverContext.cpp
-        wrapResolverTokens.cpp
+    module.cpp
+    moduleDeps.cpp
+    # resolver.cpp
+    resolverTokens.cpp
+    resolverContext.cpp
+    wrapResolver.cpp
+    wrapResolverContext.cpp
+    wrapResolverTokens.cpp
 )
 add_dependencies(${AR_CACHEDRESOLVER_TARGET_PYTHON} ${AR_CACHEDRESOLVER_TARGET_LIB})
 set_boost_namespace(${AR_CACHEDRESOLVER_TARGET_PYTHON})
+set_boost_folder_namespace(${AR_CACHEDRESOLVER_TARGET_PYTHON})
+set_boost_pxr_external_exists(${AR_CACHEDRESOLVER_TARGET_PYTHON})
 # Libs
 target_link_libraries(${AR_CACHEDRESOLVER_TARGET_PYTHON}
     ${AR_CACHEDRESOLVER_TARGET_LIB}
@@ -86,8 +89,9 @@ target_link_libraries(${AR_CACHEDRESOLVER_TARGET_PYTHON}
 # Headers
 target_include_directories(${AR_CACHEDRESOLVER_TARGET_PYTHON}
     PUBLIC
-        ${AR_BOOST_INCLUDE_DIR}
         ${AR_PYTHON_INCLUDE_DIR}
+        ${AR_TBB_INCLUDE_DIR}
+        ${AR_BOOST_INCLUDE_DIR}
         ${AR_PXR_INCLUDE_DIR}
 )
 # Props
@@ -126,7 +130,7 @@ install(
 set(TESTS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/testenv)
 set(TESTS_ENV_PYTHONPATH "PYTHONPATH=${CMAKE_INSTALL_PREFIX}/${AR_CACHEDRESOLVER_USD_PLUGIN_NAME}/lib/python${AR_ARCH_PATH_SEP}${AR_PXR_PYTHON_LIB_SITEPACKAGES}")
 set(TESTS_ENV_PXR_PLUGINPATH_NAME "PXR_PLUGINPATH_NAME=${CMAKE_INSTALL_PREFIX}/${AR_CACHEDRESOLVER_USD_PLUGIN_NAME}/resources")
-set(TESTS_ENV_LD_LIBRARY_PATH "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/${AR_CACHEDRESOLVER_USD_PLUGIN_NAME}/lib${AR_ARCH_PATH_SEP}${AR_PYTHON_LIB_DIR}")
+set(TESTS_ENV_LD_LIBRARY_PATH "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/${AR_CACHEDRESOLVER_USD_PLUGIN_NAME}/lib${AR_ARCH_PATH_SEP}${AR_PYTHON_LIB_DIR}${AR_ARCH_PATH_SEP}${AR_PXR_LIB_DIR}")
 set(TESTS_PYTHON_COMMAND ${AR_PYTHON_EXECUTABLE} -B -m unittest discover ${TESTS_SOURCE_DIR})
 
 add_test(
