--- a/src/HttpResolver/wrap/CMakeLists.txt
+++ b/src/HttpResolver/wrap/CMakeLists.txt
@@ -10,9 +10,9 @@ add_library(${AR_HTTPRESOLVER_TARGET_LIB}
     SHARED
         ../arHttp/src/arHttp/resolver.cpp
 )
-#set_boost_namespace(${AR_HTTPRESOLVER_TARGET_LIB})
 # Libs
 target_link_libraries(${AR_HTTPRESOLVER_TARGET_LIB}
+    ${AR_PYTHON_LIB}
     ${AR_PXR_LIB_PREFIX}arch
     ${AR_PXR_LIB_PREFIX}tf
     ${AR_PXR_LIB_PREFIX}gf
@@ -24,9 +24,10 @@ target_link_libraries(${AR_HTTPRESOLVER_TARGET_LIB}
 # Headers
 target_include_directories(${AR_HTTPRESOLVER_TARGET_LIB}
     PUBLIC
-    ${AR_BOOST_INCLUDE_DIR}
-    ${AR_PYTHON_INCLUDE_DIR}
-    ${AR_PXR_INCLUDE_DIR}
+        ${AR_PYTHON_INCLUDE_DIR}
+        ${AR_TBB_INCLUDE_DIR}
+        ${AR_BOOST_INCLUDE_DIR}
+        ${AR_PXR_INCLUDE_DIR}
 )
 # Props
 # Remove default "lib" prefix
