--- a/src/PythonResolver/CMakeLists.txt
+++ b/src/PythonResolver/CMakeLists.txt
@@ -10,28 +10,32 @@ endif()
 ### Targets ###
 ## Target library > pythonResolver ##
 add_library(${AR_PYTHONRESOLVER_TARGET_LIB}
-    SHARED
-        debugCodes.cpp
-        resolver.cpp
-        resolverContext.cpp
-        resolverTokens.cpp
+    debugCodes.cpp
+    resolver.cpp
+    resolverContext.cpp
+    resolverTokens.cpp
 )
 set_boost_namespace(${AR_PYTHONRESOLVER_TARGET_LIB})
+set_boost_folder_namespace(${AR_PYTHONRESOLVER_TARGET_LIB})
+set_boost_pxr_external_exists(${AR_PYTHONRESOLVER_TARGET_LIB})
 # Libs
 target_link_libraries(${AR_PYTHONRESOLVER_TARGET_LIB}
+    ${AR_PYTHON_LIB}
+    ${AR_BOOST_PYTHON_LIB}
     ${AR_PXR_LIB_PREFIX}arch
     ${AR_PXR_LIB_PREFIX}tf
     ${AR_PXR_LIB_PREFIX}gf
     ${AR_PXR_LIB_PREFIX}vt
     ${AR_PXR_LIB_PREFIX}ar
-    ${AR_BOOST_PYTHON_LIB}
+    ${AR_PXR_LIB_PREFIX}sdf
 )
 # Headers
 target_include_directories(${AR_PYTHONRESOLVER_TARGET_LIB}
     PUBLIC
-    ${AR_BOOST_INCLUDE_DIR}
-    ${AR_PYTHON_INCLUDE_DIR}
-    ${AR_PXR_INCLUDE_DIR}
+        ${AR_PYTHON_INCLUDE_DIR}
+        ${AR_TBB_INCLUDE_DIR}
+        ${AR_BOOST_INCLUDE_DIR}
+        ${AR_PXR_INCLUDE_DIR}
 )
 # Props
 # Remove default "lib" prefix
@@ -53,18 +57,18 @@ install(TARGETS ${AR_PYTHONRESOLVER_TARGET_LIB} DESTINATION ${AR_PYTHONRESOLVER_
 
 ## Target library > pythonResolver Python ##
 add_library(${AR_PYTHONRESOLVER_TARGET_PYTHON}
-    SHARED
-        module.cpp
-        moduleDeps.cpp
-        resolverTokens.cpp
-        resolverContext.cpp
-        wrapResolver.cpp
-        wrapResolverContext.cpp
-        wrapResolverTokens.cpp
-
+    module.cpp
+    moduleDeps.cpp
+    resolverTokens.cpp
+    resolverContext.cpp
+    wrapResolver.cpp
+    wrapResolverContext.cpp
+    wrapResolverTokens.cpp
 )
 add_dependencies(${AR_PYTHONRESOLVER_TARGET_PYTHON} ${AR_PYTHONRESOLVER_TARGET_LIB})
 set_boost_namespace(${AR_PYTHONRESOLVER_TARGET_PYTHON})
+set_boost_folder_namespace(${AR_PYTHONRESOLVER_TARGET_PYTHON})
+set_boost_pxr_external_exists(${AR_PYTHONRESOLVER_TARGET_PYTHON})
 # Libs
 target_link_libraries(${AR_PYTHONRESOLVER_TARGET_PYTHON}
     ${AR_PYTHONRESOLVER_TARGET_LIB}
@@ -73,8 +77,9 @@ target_link_libraries(${AR_PYTHONRESOLVER_TARGET_PYTHON}
 # Headers
 target_include_directories(${AR_PYTHONRESOLVER_TARGET_PYTHON}
     PUBLIC
-        ${AR_BOOST_INCLUDE_DIR}
         ${AR_PYTHON_INCLUDE_DIR}
+        ${AR_TBB_INCLUDE_DIR}
+        ${AR_BOOST_INCLUDE_DIR}
         ${AR_PXR_INCLUDE_DIR}
 )
 # Props
@@ -114,7 +119,7 @@ install(
 set(TESTS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/testenv)
 set(TESTS_ENV_PYTHONPATH "PYTHONPATH=${CMAKE_INSTALL_PREFIX}/${AR_PYTHONRESOLVER_USD_PLUGIN_NAME}/lib/python${AR_ARCH_PATH_SEP}${AR_PXR_PYTHON_LIB_SITEPACKAGES}")
 set(TESTS_ENV_PXR_PLUGINPATH_NAME "PXR_PLUGINPATH_NAME=${CMAKE_INSTALL_PREFIX}/${AR_PYTHONRESOLVER_USD_PLUGIN_NAME}/resources")
-set(TESTS_ENV_LD_LIBRARY_PATH "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/${AR_PYTHONRESOLVER_USD_PLUGIN_NAME}/lib${AR_ARCH_PATH_SEP}${AR_PYTHON_LIB_DIR}")
+set(TESTS_ENV_LD_LIBRARY_PATH "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/${AR_PYTHONRESOLVER_USD_PLUGIN_NAME}/lib${AR_ARCH_PATH_SEP}${AR_PYTHON_LIB_DIR}${AR_ARCH_PATH_SEP}${AR_PXR_LIB_DIR}")
 set(TESTS_ENV_AR_SEARCH_PATHS "AR_SEARCH_PATHS=/env/search/pathA:/env/search/pathB")
 set(TESTS_ENV_AR_SEARCH_REGEX_EXPRESSION "AR_SEARCH_REGEX_EXPRESSION=(v\\d\\d\\d)")
 set(TESTS_ENV_AR_SEARCH_REGEX_FORMAT "AR_SEARCH_REGEX_FORMAT=v000")
